[Fix](ABC-1322): Image - Height issue when position is left or right (#944)
* [fix](ABC-1322): Image - Fix height issue when position is left or right

* [fix](ABC-1322): Image - Change image src in stories

* [fix](ABC-1322): Image - Fix original image appears under compare image

--- a/src/modules/base/image/image.css
+++ b/src/modules/base/image/image.css
@@ -1,3 +1,7 @@
+.avonni-image {
+    overflow: hidden;
+}
+
 .avonni-image_fluid {
     max-width: 100% !important;
     height: auto;
@@ -163,6 +167,7 @@
 
 .avonni-image__compare-img-container {
     width: 0;
+    background-color: #fff;
 }
 
 .avonni-image__compare-img {
